added column description

--- a/loan_prediction.ipynb
+++ b/loan_prediction.ipynb
@@ -65,6 +65,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e7f338d",
+   "metadata": {},
+   "source": [
+    "The data that will be used is a Loan data whether a person is given the loan or not\n",
+    "<table>\n",
+    "<tr>\n",
+    "<th>Column Name</th>\n",
+    "<th>Description</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>person_age</td>\n",
+    "<td>The age of the person</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>person_gender</td>\n",
+    "<td>The gender of the person</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>person_education</td>\n",
+    "<td>Last Education</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>person_income</td>\n",
+    "<td>Person income in a year</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>person_emp_exp</td>\n",
+    "<td>Tahun pengalaman bekerja</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>person_home_ownership</td>\n",
+    "<td>The status of ownership of a home</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>loan_amnt</td>\n",
+    "<td>The amount of loan that is asked</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>loan_intent</td>\n",
+    "<td>The purpose of the loan</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>loan_int_rate</td>\n",
+    "<td>Interest rate of the loan</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>loan_percent_income</td>\n",
+    "<td>The amount of the loan as a percentage form yearly income</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>cb_person_cred_hist_length</td>\n",
+    "<td>Credit duration in one year</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>credit_score</td>\n",
+    "<td>The credit score of the person</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>previous_loan_defaults_on_file</td>\n",
+    "<td>Previous loan delinquency indicators</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>loan_status (target variable)</td>\n",
+    "<td>Loan Approval; 1: Accepted dan 0: Rejected</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "673cbd77",
