feat: added presets

--- a/loan_prediction.ipynb
+++ b/loan_prediction.ipynb
@@ -90,7 +90,7 @@
     "</tr>\n",
     "<tr>\n",
     "<td>person_emp_exp</td>\n",
-    "<td>Tahun pengalaman bekerja</td>\n",
+    "<td>Total Work Experience</td>\n",
     "</tr>\n",
     "<tr>\n",
     "<td>person_home_ownership</td>\n",
@@ -3231,6 +3231,49 @@
     "save_cache(loan_intent_enc, \"loan_intent_encoder.pkl\")\n",
     "save_cache(previous_loans_enc, \"previous_loans_encoder.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "99516332",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "person_age                               21.0\n",
+       "person_gender                          female\n",
+       "person_education                  High School\n",
+       "person_income                         12282.0\n",
+       "person_emp_exp                              0\n",
+       "person_home_ownership                     OWN\n",
+       "loan_amnt                              1000.0\n",
+       "loan_intent                         EDUCATION\n",
+       "loan_int_rate                           11.14\n",
+       "loan_percent_income                      0.08\n",
+       "cb_person_cred_hist_length                2.0\n",
+       "credit_score                              504\n",
+       "previous_loan_defaults_on_file            Yes\n",
+       "loan_status                                 0\n",
+       "Name: 1, dtype: object"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"loan_status\"] == 0].iloc()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b276ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
