--- a/loan_prediction.ipynb
+++ b/loan_prediction.ipynb
@@ -3234,37 +3234,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "id": "99516332",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "person_age                               21.0\n",
-       "person_gender                          female\n",
-       "person_education                  High School\n",
-       "person_income                         12282.0\n",
-       "person_emp_exp                              0\n",
-       "person_home_ownership                     OWN\n",
-       "loan_amnt                              1000.0\n",
-       "loan_intent                         EDUCATION\n",
-       "loan_int_rate                           11.14\n",
-       "loan_percent_income                      0.08\n",
-       "cb_person_cred_hist_length                2.0\n",
-       "credit_score                              504\n",
-       "previous_loan_defaults_on_file            Yes\n",
-       "loan_status                                 0\n",
-       "Name: 1, dtype: object"
+       "person_age                            22.0\n",
+       "person_gender                       female\n",
+       "person_education                    Master\n",
+       "person_income                      71948.0\n",
+       "person_emp_exp                           0\n",
+       "person_home_ownership                 RENT\n",
+       "loan_amnt                          35000.0\n",
+       "loan_intent                       PERSONAL\n",
+       "loan_int_rate                        16.02\n",
+       "loan_percent_income                   0.49\n",
+       "cb_person_cred_hist_length             3.0\n",
+       "credit_score                           561\n",
+       "previous_loan_defaults_on_file          No\n",
+       "loan_status                              1\n",
+       "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[data[\"loan_status\"] == 0].iloc()[0]"
+    "data[data[\"loan_status\"] == 1].iloc()[0]"
    ]
   },
   {
